Fixed alignment of elements

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,15 @@ body {
   height: 100vh;
   display: grid;
   place-content: center;
+  position: relative;
+}
+
+body[data-icon="pattern-bottom"]::before {
+  content: "";
+  background-image: url(images/bg-pattern-bottom-desktop.svg);
+  width: 1085px;
+  height: 673px;
+  position: absolute;
 }
 
 .testimonials {
@@ -75,12 +84,11 @@ body {
 .top-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 4.8rem;
   margin-bottom: 6.4rem;
 }
 
 .top-section-left {
-  margin-right: 13.4rem;
+  padding-right: 16.4rem;
 }
 
 .top-heading {
@@ -103,41 +111,68 @@ header p {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
+  margin-top: 2.4rem;
 }
 
 .rating-box {
+  width: 445px;
   background-color: hsl(300, 24%, 96%);
   font-size: 1.8rem;
   color: hsl(300, 43%, 22%);
   font-weight: 700;
-  border-radius: 0.5rem;
-  padding: 1.6rem 2.4rem;
+  border-radius: 0.8rem;
+  padding: 0.8rem 2.4rem;
+  padding-right: 2rem;
   display: flex;
   align-items: center;
+  gap: 3.2rem;
 }
 
-.rating-text {
-  display: inline-flex;
+.rating-box:nth-child(2) {
+  margin-left: 4rem;
+}
+
+.rating-box:nth-child(3) {
+  margin-left: 8.2rem;
+}
+
+.stars {
+  display: flex;
   align-items: center;
+  gap: 0.5rem;
 }
 
-.rating-text[data-icon="star"]::before {
-  content: "";
+.star {
+  display: inline-block;
   background-image: url(images/icon-star.svg);
   width: 17px;
   height: 16px;
 }
 
+.rating-text {
+  margin-top: 0.4rem;
+}
+
 .bottom-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 280px;
 }
 
 .buyer-testimonial {
   max-width: 350px;
+  max-height: 230px;
   padding: 3.2rem 2.4rem;
   background-color: hsl(300, 43%, 22%);
   border-radius: 0.5rem;
+}
+
+.buyer-testimonial:nth-child(2) {
+  margin-top: 2.4rem;
+}
+
+.buyer-testimonial:nth-child(3) {
+  margin-top: 4.8rem;
 }
 
 .buyer-info {
@@ -170,7 +205,7 @@ header p {
 }
 
 .testimonial-content {
-  margin-top: 1.6rem;
+  margin-top: 2.4rem;
   color: hsl(0, 0%, 100%);
   font-size: 1.6rem;
   font-weight: 500;
